Bug - Overflow errado

--- a/littlegram_front/src/views/dashBoard/DashBoard.css
+++ b/littlegram_front/src/views/dashBoard/DashBoard.css
@@ -16,11 +16,11 @@
 }
 
 .PostHeader {
-    width: calc(100% - -50px);
+    width: calc(100%);
     display: flex;
     flex-direction: row;
     justify-content: flex-start;
-    margin: 10px 0px 10px 50px;
+    margin: 10px 0px 10px 0px;
 }
 
 .ModalMaior {
